pesky spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @media screen and (max-device-width: 600px) {
   body {
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
       "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
       "Helvetica Neue", sans-serif;
@@ -11,9 +10,7 @@
 
 @media screen and not (max-device-width: 600px) {
   body {
-    max-width: 1440px;
-    overflow: hidden;
-    margin: 0;
+    overflow: auto;
     zoom: 2;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
       "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
